--- a/index.html
+++ b/index.html
@@ -3,14 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Открываем WhatsApp...</title>
-    <script>
-        setTimeout(function() {
-            window.location.href = "whatsapp://send?phone=77089297063";
-        }, 100);
-    </script>
+    <title>Открытие WhatsApp</title>
+    <meta http-equiv="refresh" content="0; url=whatsapp://send?phone=77089297063">
 </head>
 <body>
-    <p>Перенаправляем в WhatsApp...</p>
+    <p>Если вас не перенаправило, <a href="whatsapp://send?phone=77089297063">нажмите здесь</a>.</p>
 </body>
 </html>
