--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Открытие WhatsApp</title>
-    <meta http-equiv="refresh" content="0; url=whatsapp://send?phone=77089297063">
+    <title>Открыть WhatsApp</title>
 </head>
 <body>
-    <p>Если вас не перенаправило, <a href="whatsapp://send?phone=77089297063">нажмите здесь</a>.</p>
+    <p>Нажмите кнопку, чтобы открыть WhatsApp:7708929706379991234567" target="_blank">
+        <button style="font-size:20px;padding:10px 20px;">Открыть WhatsApp</button>
+    </a>
 </body>
 </html>
+
