--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Открыть WhatsApp</title>
 </head>
 <body>
-    <p>Нажмите кнопку, чтобы открыть WhatsApp:7708929706379991234567" target="_blank">
+    <p>Нажмите кнопку, чтобы открыть WhatsApp:</p>
+    <a href="whatsapp://send?phone=77089297063" target="_blank">
         <button style="font-size:20px;padding:10px 20px;">Открыть WhatsApp</button>
     </a>
 </body>
 </html>
-
